--- a/.vimrc.1
+++ b/.vimrc.1
@@ -1,147 +1,131 @@
-" vim script start 
-" =============        Signature      ===================
-" @version : 0.1
-" @last-update : 2017-01-26 
-" @file : vimrc
-" @git : https://github.com/drake-jin/.dotfiles/
-" @desc : setting vim 
-" @sub-desc : this config is based on https://github.com/fisadev/fisa-vim-config
-" ============================================================
+" Fisa-vim-config
+" http://fisadev.github.io/fisa-vim-config/
+" version: 8.2
 
+" ============================================================================
+" Vim-plug initialization
+" Avoid modify this section, unless you are very sure of what you are doing
 
-" ==============         Plug in installation      =========================
-let is_installed_vim_plug = 0
+let vim_plug_just_installed = 0
 let vim_plug_path = expand('~/.vim/autoload/plug.vim')
-
 if !filereadable(vim_plug_path)
     echo "Installing Vim-plug..."
     echo ""
     silent !mkdir -p ~/.vim/autoload
-    "Junegunn,the best of open source creator, is who has worked at kakao co.
     silent !curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-    let is_installed_vim_plug = 1
+    let vim_plug_just_installed = 1
 endif
 
 " manually load vim-plug the first time
-if is_installed_vim_plug
+if vim_plug_just_installed
     :execute 'source '.fnameescape(vim_plug_path)
 endif
 
-" ===========================================================================
+" Obscure hacks done, you can now modify the rest of the .vimrc as you wish :)
+
+" ============================================================================
+" Active plugins
+" You can disable or add new ones here:
+
+" this needs to be here, so vim-plug knows we are declaring the plugins we
+" want to use
 call plug#begin('~/.vim/plugged')
 
+" Plugins from github repos:
 
-
-" ==================  Plugins from github repos  ======================
-"---------------------------
-"    file system viewer
-"---------------------------
-Plug 'arielrossanigo/dir-configs-override.vim' " Override configs by directory 
-
-"-------------------------
-"   IDE Features
-"--------------------------
-Plug 'scrooloose/nerdtree'              " Better file browser
-Plug 'majutsushi/tagbar'                " Class module browser
-Plug 'mileszs/ack.vim'                  " Ack code search (requires ack installed in the system)
-Plug 'scrooloose/syntastic'             " Python and other languages code checker
-Plug 'ctrlpvim/ctrlp.vim'               " Code and files fuzzy finder
-Plug 'kien/tabman.vim'                  " Tab list panel
-Plug 'vim-airline/vim-airline'          " Airline ,Showing vi editor's status INSERT >> +0 ~0 -0 | vimrc[+]                              vim | utf-8[unix]  ....
-Plug 'vim-airline/vim-airline-themes'   " Airline's theme
-
-Plug 'fisadev/FixedTaskList.vim'        " Pending tasks list   
-"USAGE : if you write 'todo' in file, task manage will anchor the text and go the line [press <F2> on this setting]
-
-
-"--------------------
-" Color Schemes
-"--------------------
-Plug 'fisadev/fisa-vim-colorscheme'     " Terminal Vim with 256 colors colorscheme
-
-
-
-"-------------------------
-"   Fast Editing
-"--------------------------
-Plug 'tpope/vim-surround'               " Surround
-Plug 'scrooloose/nerdcommenter'         " Code commenter
-Plug 'michaeljsmith/vim-indent-object'  " Indent text object
-Plug 'jeetsukumaran/vim-indentwise'     " Indentation based movements
-
-"------------------------
-"   Code Completions
-"-----------------------
-Plug 'mattn/emmet-vim'                  " Zen coding
-Plug 'Shougo/neocomplcache.vim'         " Better autocompletion
-Plug 'Townk/vim-autoclose'              " Autoclose  like { then, }  ( then, )
-
-
-"---------------------------------------------
-"   Syntax/Indent for any language enhancement
-"--------------------------------------------
-
-" ----------------python---------------------
-Plug 'klen/python-mode'                 " Python mode (indentation, doc, refactor, lints, code checking, motion and operators, highlighting, run and ipdb breakpoints)
-Plug 'fisadev/vim-isort'                " Automatically sort python imports
+" Override configs by directory 
+Plug 'arielrossanigo/dir-configs-override.vim'
+" Better file browser
+Plug 'scrooloose/nerdtree'
+" Code commenter
+Plug 'scrooloose/nerdcommenter'
+" Class/module browser
+Plug 'majutsushi/tagbar'
+" Code and files fuzzy finder
+Plug 'ctrlpvim/ctrlp.vim'
+" Extension to ctrlp, for fuzzy command finder
+Plug 'fisadev/vim-ctrlp-cmdpalette'
+" Zen coding
+Plug 'mattn/emmet-vim'
+" Git integration
+Plug 'motemen/git-vim'
+" Tab list panel
+Plug 'kien/tabman.vim'
+" Airline
+Plug 'vim-airline/vim-airline'
+Plug 'vim-airline/vim-airline-themes'
+" Terminal Vim with 256 colors colorscheme
+Plug 'fisadev/fisa-vim-colorscheme'
+" Consoles as buffers
+Plug 'rosenfeld/conque-term'
+" Pending tasks list
+Plug 'fisadev/FixedTaskList.vim'
+" Surround
+Plug 'tpope/vim-surround'
+" Autoclose
+Plug 'Townk/vim-autoclose'
+" Indent text object
+Plug 'michaeljsmith/vim-indent-object'
+" Indentation based movements
+Plug 'jeetsukumaran/vim-indentwise'
+" Python mode (indentation, doc, refactor, lints, code checking, motion and
+" operators, highlighting, run and ipdb breakpoints)
+Plug 'klen/python-mode'
+" Better autocompletion
+Plug 'Shougo/neocomplcache.vim'
+" Snippets manager (SnipMate), dependencies, and snippets repo
+Plug 'MarcWeber/vim-addon-mw-utils'
+Plug 'tomtom/tlib_vim'
+Plug 'honza/vim-snippets'
+Plug 'garbas/vim-snipmate'
+" Git/mercurial/others diff icons on the side of the file lines
+Plug 'mhinz/vim-signify'
+" Automatically sort python imports
+Plug 'fisadev/vim-isort'
+" Drag visual blocks arround
+Plug 'fisadev/dragvisuals.vim'
+" Window chooser
+Plug 't9md/vim-choosewin'
+" Python and other languages code checker
+Plug 'scrooloose/syntastic'
+" Paint css colors with the real color
+Plug 'lilydjwg/colorizer'
+" Ack code search (requires ack installed in the system)
+Plug 'mileszs/ack.vim'
 if has('python')
     " YAPF formatter for Python
     Plug 'pignacio/vim-yapf-format'
 endif
+" Relative numbering of lines (0 is the current line)
+" (disabled by default because is very intrusive and can't be easily toggled
+" on/off. When the plugin is present, will always activate the relative 
+" numbering every time you go to normal mode. Author refuses to add a setting 
+" to avoid that)
+" Plug 'myusuf3/numbers.vim'
 
-"------------others----------------
+" Plugins from vim-scripts repos:
 
-
-"---------------------
-"   Snippets 
-"---------------------
-Plug 'MarcWeber/vim-addon-mw-utils'     " dependencies
-Plug 'tomtom/tlib_vim'                  " dependencies
-" Snippets manager (SnipMate), dependencies, and snippets repo
-Plug 'garbas/vim-snipmate'
-Plug 'honza/vim-snippets'
-
-
-"---------------------------
-"  vim-scripts for plugins
-"---------------------------
-Plug 'IndexedSearch'                    " Search results counter
-Plug 'matchit.zip'                      " XML/HTML tags navigation
-Plug 'Wombat'                           " Gvim colorscheme
-Plug 'YankRing.vim'                     " Yank history navigation
-Plug 'fisadev/vim-ctrlp-cmdpalette'     " Extension to ctrlp, for fuzzy command finder 
-Plug 'fisadev/dragvisuals.vim'          " Drag visual blocks arround
-
-
-"----------------------
-" other utils
-"---------------------
-Plug 'motemen/git-vim'                  " Git integration
-Plug 'mhinz/vim-signify'                " Git/mercurial/others diff icons on the side of the file lines
-Plug 't9md/vim-choosewin'               " Window chooser
-Plug 'lilydjwg/colorizer'               " Paint css colors with the real color
-Plug 'rosenfeld/conque-term'            " Consoles as buffers, To use any command in vi editor. execute :ConqueTermSplit top
-
-
-" ------- javascript eslint ----
-Plug 'mtscout6/syntastic-local-eslint.vim'
+" Search results counter
+Plug 'IndexedSearch'
+" XML/HTML tags navigation
+Plug 'matchit.zip'
+" Gvim colorscheme
+Plug 'Wombat'
+" Yank history navigation
+Plug 'YankRing.vim'
 
 " Tell vim-plug we finished declaring plugins, so it can load them
 call plug#end()
 
-
 " ============================================================================
 " Install plugins the first time vim runs
 
-if is_installed_vim_plug
+if vim_plug_just_installed
     echo "Installing Bundles, please ignore key map error messages"
     :PlugInstall
 endif
 
 " ============================================================================
-
-
-
 " Vim settings and mappings
 " You can edit them as you wish
 
@@ -161,8 +145,7 @@ set shiftwidth=4
 " tab length exceptions on some file types
 autocmd FileType html setlocal shiftwidth=4 tabstop=4 softtabstop=4
 autocmd FileType htmldjango setlocal shiftwidth=4 tabstop=4 softtabstop=4
-" ssibal airbnb jot got eun ..
-autocmd FileType javascript setlocal shiftwidth=2 tabstop=2 softtabstop=2
+autocmd FileType javascript setlocal shiftwidth=4 tabstop=4 softtabstop=4
 
 " always show status bar
 set ls=2
@@ -213,8 +196,6 @@ ca w!! w !sudo tee "%"
 " simple recursive grep
 nmap ,r :Ack 
 nmap ,wr :Ack <cword><CR>
-
-
 
 " use 256 colors when possible
 if (&term =~? 'mlterm\|xterm\|xterm-256\|screen-256') || has('nvim')
@@ -326,19 +307,12 @@ nmap <leader>e :Errors<CR>
 let g:syntastic_check_on_open = 1
 " don't put icons on the sign column (it hides the vcs status icons of signify)
 let g:syntastic_enable_signs = 0
-
-
-
-
-" custom icons (enable them if you use a patched font, and enable the previous setting)
-" if you can't see  this character '⮀'  have to close this comment line  
-let g:syntastic_error_symbol = '✗'
-let g:syntastic_warning_symbol = '⚠'
-let g:syntastic_style_error_symbol = '⁉️'
-let g:syntastic_style_warning_symbol = '💩'
-
-
-
+" custom icons (enable them if you use a patched font, and enable the previous 
+" setting)
+"let g:syntastic_error_symbol = '✗'
+"let g:syntastic_warning_symbol = '⚠'
+"let g:syntastic_style_error_symbol = '✗'
+"let g:syntastic_style_warning_symbol = '⚠'
 
 " Python-mode ------------------------------
 
@@ -355,7 +329,6 @@ let g:pymode_rope_goto_definition_bind = ',d'
 let g:pymode_rope_goto_definition_cmd = 'e'
 nmap ,D :tab split<CR>:PymodePython rope.goto()<CR>
 nmap ,o :RopeFindOccurrences<CR>
-
 
 " NeoComplCache ------------------------------
 
@@ -430,39 +403,13 @@ let g:airline#extensions#whitespace#enabled = 0
 
 " to use fancy symbols for airline, uncomment the following lines and use a
 " patched font (more info on the README.rst)
-if !exists('g:airline_symbols')
-   let g:airline_symbols = {}
-endif
-
-" if you can't see  this character '⮀'  have to close this comment line  
-let g:airline_left_sep = '⮀'
-let g:airline_left_alt_sep = '⮁'
-let g:airline_right_sep = '⮂'
-let g:airline_right_alt_sep = '⮃'
-let g:airline_symbols.branch = '⭠'
-let g:airline_symbols.readonly = '⭤'
-let g:airline_symbols.linenr = '⭡'
-
-
-
-" eslint settings"
-" 2017-01-30
-" syntactic
-set statusline+=%#warningmsg#
-set statusline+=%{SyntasticStatuslineFlag()}
-set statusline+=%*
-let g:syntastic_always_populate_loc_list = 1
-let g:syntastic_loc_list_height = 5
-let g:syntastic_auto_loc_list = 1
-let g:syntastic_check_on_open = 1
-let g:syntastic_check_on_wq = 1
-let g:syntastic_javascript_checkers = ['eslint']
-highlight link SyntasticErrorSign SignColumn
-highlight link SyntasticWarningSign SignColumn
-highlight link SyntasticStyleErrorSign SignColumn
-highlight link SyntasticStyleWarningSign SignColumn
-
-
-
-
-
+"if !exists('g:airline_symbols')
+"   let g:airline_symbols = {}
+"endif
+"let g:airline_left_sep = '⮀'
+"let g:airline_left_alt_sep = '⮁'
+"let g:airline_right_sep = '⮂'
+"let g:airline_right_alt_sep = '⮃'
+"let g:airline_symbols.branch = '⭠'
+"let g:airline_symbols.readonly = '⭤'
+"let g:airline_symbols.linenr = '⭡'
